@@ -3,6 +3,9 @@
   * src/tap/usbconn/libftdi.c (usbconn_ftdi_common_open): Use the new interface
     option and call ftdi_set_interface with it.  Patch by Michael Walle.
 
+  * src/tap/cable/generic_usbconn.h: Add new "interface" option to usage.
+    Patch by Michael Walle.
+
 2011-04-30  Mike Frysinger  <vapier@gentoo.org>
 
   * configure.ac: Force recent versions of autotools (at least ones released
